<resources>
    <string name="app_name">Ganjel Buku</string>
    <string name="reading_list">Reading List :</string>
    <string name="add_book">Add book</string>
    <string name="input_book">Input Book</string>
    <string name="add">Add</string>
    <string name="title">Tittle</string>
    <string name="profile">Profile</string>
    <string name="usernameInMain">Hello, Guest!</string>
    <string name="loginTitle">Log In</string>
    <string name="tvUsernameLogIn">Username</string>
    <string name="tvPasswordLogIn">Password</string>
</resources>