<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".InputActivity">

    <TextView
        android:id="@+id/inputBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_book"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputTextBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/inputBookTitle"
        tools:layout_editor_absoluteX="6dp" />

    <Button
        android:id="@+id/inputAddBookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/inputTextBookName"
        tools:layout_editor_absoluteX="7dp" />
</androidx.constraintlayout.widget.ConstraintLayout>