<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:textSize="25sp"
            android:text="@string/loginTitle" />

        <TextView
            android:id="@+id/tvUsernameLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/tvUsernameLogIn" />

        <EditText
            android:id="@+id/etUsernameLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tvPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPasswordLogIn" />

        <EditText
            android:id="@+id/etPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Login" />


    </LinearLayout>

</RelativeLayout>